fix: Fix scrollbar issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
-
-
 .App {
   text-align: center;
-  width: 100vw;
 }
 
 .App_products {
