--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -45,7 +45,6 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  overflow: scroll;
 }
 
 .Modal-imageContainer {
@@ -64,7 +63,6 @@
   -moz-box-sizing: border-box; /* Firefox, other Gecko */
   box-sizing: border-box; /* Opera/IE 8+ */
   padding: 40px 20px;
-  overflow: scroll;
 }
 
 .Modal-body-image {
